force-app/main/default/objects/PRSE_Configuration__mdt/PRSE_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Holds settings and toggles for PRSE</description>
    <label>PRSE Configuration</label>
    <pluralLabel>PRSE Configurations</pluralLabel>
</CustomObject>