force-app/main/default/objects/PRSE_Configuration__mdt/fields/Public_Penalties_Search_Results_Page__c.field-meta.xml
<CustomField>
    <fullName>Public_Penalties_Search_Results_Page__c</fullName>
    <label>Public Penalties Search Results / Page</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>