force-app/main/default/objects/PRSE_Configuration__mdt/fields/Use_new_gov_EPC_endpoint__c.field-meta.xml
<CustomField>
    <fullName>Use_new_gov_EPC_endpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wether to use the new EPC API at https://api.get-energy-performance-data.epb-staging.communities.gov.uk (or production version) as opposed to the old opendatacommunities endpoint - WARNING - new endpoint is currently using TEST data</description>
    <label>Use new .gov EPC endpoint</label>
    <type>Checkbox</type>
</CustomField>